--- a/front/src/components/Oportunidades/Oportunidades.module.css
+++ b/front/src/components/Oportunidades/Oportunidades.module.css
@@ -318,7 +318,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 20rem;
+  /* height: 20rem; */
   font-weight: 800;
   font-size: xx-large;
 }
@@ -326,41 +326,69 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 20rem;
-  margin-top: 1.5rem;
+  /* height: 20rem; */
+  /* margin-top: 1.5rem; */
   font-weight: 800;
   font-size: xx-large;
 }
 .vestuarios {
   background-color: #45bf70;
   width: 60%;
-  margin-right: 1.5rem;
+  height: 20rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
   padding: 1rem 1rem 1rem 2rem;
   border-radius: 1rem;
+  transition: width 100ms ease, height 100ms ease, margin 100ms;
+}
+.social:hover,
+.vestuarios:hover {
+  width: calc(60% + 1rem);
+  height: 21rem;
+  z-index: 1000;
+  margin: 0;
+  cursor: pointer;
 }
 .buffet {
   width: 40%;
+  height: 20rem;
   background-color: yellow;
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
   padding: 1rem 1rem 1rem 2rem;
   border-radius: 1rem;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+  transition: width 100ms ease, height 100ms ease, margin 100ms;
 }
 .parrillas {
   width: 40%;
+  height: 20rem;
   background-color: orange;
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
   padding: 1rem 1rem 1rem 2rem;
   border-radius: 1rem;
+  margin-right: 1rem;
+  margin-top: 1rem;
+  transition: width 100ms ease, height 100ms ease, margin 100ms;
+}
+.parrillas:hover,
+.buffet:hover {
+  width: calc(40% + 1rem);
+  height: 21rem;
+  z-index: 1000;
+  margin: 0;
+  cursor: pointer;
 }
 .social {
   width: 60%;
+  height: 20rem;
   background-color: skyblue;
   margin-left: 1.5rem;
   display: flex;
@@ -368,4 +396,7 @@
   align-items: flex-end;
   padding: 1rem 1rem 1rem 2rem;
   border-radius: 1rem;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  transition: width 100ms ease, height 100ms ease, margin 100ms;
 }
