--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,15 +1,15 @@
 #root {
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   text-align: center;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: "Titillium Web", sans-serif;
   margin: 0 auto;
   --verde-claro: rgb(89, 223, 149);
   --verde-oscuro: rgb(26, 145, 79);
-  --verde-medio: #3BBA74;
+  --verde-medio: #3bba74;
 }
 
 .logo {
