--- a/front/src/components/MisReservas/MisReservas.module.css
+++ b/front/src/components/MisReservas/MisReservas.module.css
@@ -7,6 +7,7 @@
   width: 80rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   color: #111;
+  margin-bottom: 3rem;
 }
 
 .reservasTable {
@@ -47,7 +48,6 @@
   margin: 3rem;
   color: #111;
   font-weight: 600;
-
 }
 
 .eachReserve td {
